--- a/index.html
+++ b/index.html
@@ -2,8 +2,46 @@
 <html>
 <head>
 	<title>Sanchit Khurana</title>
+	<link href="https://fonts.googleapis.com/css?family=Montserrat|Source+Sans+Pro" rel="stylesheet">
+	<style type="text/css">
+		body {
+			font-family: Montserrat, sans-serif;
+		}
+		#container {
+			margin: 0 auto;
+			justify-content: center;
+			text-align: center;
+			max-width: 640px;
+		}
+		img {
+			 border-radius: 50%;
+		}
+		footer {
+			margin: auto;
+			justify-content: center;
+			text-align: center;
+			max-width: 640px;
+			position: fixed;
+		}
+		.footer{
+		    position: fixed;
+		    bottom: 10px;
+		    left: 50%;
+		    margin-left: -200px; /*negative half the width */
+		}
+	</style>
 </head>
 <body>
-	<p>Hello! My name is Sanchit Khurana</p>
+	<div id="container">
+		<h2>Hello! My name is Sanchit Khurana</h2>
+		<img src="assets/images/sanchit.jpg" width="200px" height="200px">
+		<p>I am a junior student pursuing Bachelor of Technology in Computer Science and Engineering from Guru Govind Singh Indraprastha University, Delhi.</p>
+		<p>I am a Python enthusiast and currently learning about web technologies. This site is the place I own on the internet.</p>
+	</div>
+	<footer>
+		<div class="footer">
+			Copyright &copy; Sanchit Khurana. Made with &hearts; in New Delhi.
+		</div>
+	</footer>
 </body>
 </html>
