--- a/index.html
+++ b/index.html
@@ -1,47 +1,59 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Sanchit Khurana</title>
-	<link href="https://fonts.googleapis.com/css?family=Montserrat|Source+Sans+Pro" rel="stylesheet">
-	<style type="text/css">
-		body {
-			font-family: Montserrat, sans-serif;
-		}
-		#container {
-			margin: 0 auto;
-			justify-content: center;
-			text-align: center;
-			max-width: 640px;
-		}
-		img {
-			 border-radius: 50%;
-		}
-		footer {
-			margin: auto;
-			justify-content: center;
-			text-align: center;
-			max-width: 640px;
-			position: fixed;
-		}
-		.footer{
-		    position: fixed;
-		    bottom: 10px;
-		    left: 50%;
-		    margin-left: -200px; /*negative half the width */
-		}
-	</style>
+    <title>Sanchit Khurana</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Source+Sans+Pro" rel="stylesheet">
+    <style type="text/css">
+        body {
+            background-color: #f4f4f4;
+            font-family: Montserrat, sans-serif;
+        }
+        #container {
+            background-color: #FFFFFF;
+            margin: 0 auto;
+            justify-content: center;
+            text-align: center;
+            max-width: 640px;
+            padding: 20px 20px 20px 20px;
+            border-radius: 10%;
+
+
+        }
+        img {
+             border-radius: 50%;
+             border: 30px solid aliceblue;
+
+        }
+        footer {
+            margin: auto;
+            justify-content: center;
+            text-align: center;
+            max-width: 640px;
+            position: fixed;
+        }
+        .footer{
+            position: fixed;
+            bottom: 10px;
+            margin-left: -9px;
+            background-color: #000;
+            color: #fff;
+            padding: 5px;
+            width: 100%;
+            border-color: 0;
+        }
+    </style>
 </head>
 <body>
-	<div id="container">
-		<h2>Hello! My name is Sanchit Khurana</h2>
-		<img src="assets/images/sanchit.jpg" width="200px" height="200px">
-		<p>I am a junior student pursuing Bachelor of Technology in Computer Science and Engineering from Guru Govind Singh Indraprastha University, Delhi.</p>
-		<p>I am a Python enthusiast and currently learning about web technologies. This site is the place I own on the internet.</p>
-	</div>
-	<footer>
-		<div class="footer">
-			Copyright &copy; Sanchit Khurana. Made with &hearts; in New Delhi.
-		</div>
-	</footer>
+    <div id="container">
+        <h2>Hello! My name is Sanchit Khurana</h2>
+        <img src="assets/images/sanchit.jpg" width="200px" height="200px">
+        <p>I am a junior student pursuing Bachelor of Technology in Computer Science and Engineering from Guru Gobind Singh Indraprastha University, Delhi, India.</p>
+        <p>I am a Python enthusiast and currently learning about web technologies. This site is the place I own on the Internet.</p>
+    </div>
+    <footer>
+        <div class="footer">
+            Copyright &copy; 2019 Sanchit Khurana. Made with &hearts; in New Delhi, India.
+        </div>
+    </footer>
 </body>
 </html>
