added links and minor updates

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Sanchit Khurana</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Source+Sans+Pro" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
     <style type="text/css">
         body {
             background-color: #f4f4f4;
@@ -10,14 +11,14 @@
         }
         #container {
             background-color: #FFFFFF;
-            margin: 0 auto;
+            margin: 95px auto;
             justify-content: center;
             text-align: center;
+            vertical-align: middle;
+            top margin: 200px;
             max-width: 640px;
             padding: 20px 20px 20px 20px;
             border-radius: 10%;
-
-
         }
         img {
              border-radius: 50%;
@@ -41,19 +42,61 @@
             width: 100%;
             border-color: 0;
         }
+        .fa{
+             background-color: #FFFFFF;
+            margin: 0 auto;
+            justify-content: center;
+            text-align: center;
+            max-width: 640px;
+            padding: 10px 10px 10px 10px;
+            border-radius: 50%;
+        }
+        .fa:hover {
+    opacity: 0.7;
+        }
+        .fa-facebook {
+            background: #3B5998;
+            color: white;
+        }
+        .fa-twitter {
+            background: #55ACEE;
+            color: white;
+        }
+        .fa-linkedin {
+            background: #007bb5;
+            color: white;
+        }
+        .fa-instagram {
+            background: #125688;
+            color: white;
+        }
+        .fa-telegram {
+            background: #007bb5;
+            color: white;}
     </style>
-</head>
-<body>
-    <div id="container">
-        <h2>Hello! My name is Sanchit Khurana</h2>
-        <img src="assets/images/sanchit.jpg" width="200px" height="200px">
-        <p>I am a junior student pursuing Bachelor of Technology in Computer Science and Engineering from Guru Gobind Singh Indraprastha University, Delhi, India.</p>
-        <p>I am a Python enthusiast and currently learning about web technologies. This site is the place I own on the Internet.</p>
-    </div>
+        </head>
+            <body>
+                <div id="container">
+                    <h2>Hello! My name is Sanchit Khurana</h2>
+                    <img src="assets/images/sanchit.jpg" width="200px" height="200px">
+                    <p>I am a junior student pursuing Bachelor of Technology in Computer Science and Engineering from Guru Gobind Singh Indraprastha University, Delhi, India.</p>
+                    <p>I am a Python enthusiast and currently learning about web technologies. This site is the place I own on the Internet.</p>
+                    <fa>
+                        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+                        <a href="https://www.facebook.com/GeniusLearner?ref=bookmarks" class="fa fa-facebook"></a>
+                        <a href="https://twitter.com/genius_learner" class="fa fa-twitter"></a>
+                        <a href="https://www.instagram.com/geniuslearner/" class="fa fa-instagram"></a>
+                        <a href="https://www.linkedin.com/in/sanchit-khurana-547585189/" class="fa fa-linkedin"></a>
+                        <a href="https://web.telegram.org/#/im" class="fa fa-telegram"></a>
+                    </fa>
+                </div>
     <footer>
         <div class="footer">
             Copyright &copy; 2019 Sanchit Khurana. Made with &hearts; in New Delhi, India.
         </div>
     </footer>
-</body>
-</html>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+
+        </body>
+    </html>
