--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Sanchit Khurana</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Source+Sans+Pro" rel="stylesheet">
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style type="text/css">
         body {
             background-color: #f4f4f4;
