--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ input[type=submit]:hover {
       <img src="https://i.gadgets360cdn.com/large/macbook_table_full_1482314361057.png?output-quality=80&output-format=webp" style="width:100%">
     </div>
     <div class="column">
-      <form action="/action_page.php" method="post">;
+      <form action="/action_page.php" method="post">
         <label for="fname">First Name</label>
         <input type="text" id="fname" name="firstname" placeholder="Your name..">
         <label for="lname">Last Name</label>
