update submit button

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             max-width: 640px;
             padding: 20px 20px 20px 20px;
             border-radius: 10%;
+            margin-bottom: 150px;
         }
         img {
              border-radius: 50%;
@@ -77,14 +78,14 @@
         }
         * {
   box-sizing: border-box;
-}
+           }
 
 /* Style inputs */
 input[type=text], select, textarea {
   width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
-  margin-top: 6px;
+  margin-top: : 6px;
   margin-bottom: 16px;
   resize: vertical;
 }
@@ -92,9 +93,10 @@ input[type=text], select, textarea {
 input[type=submit] {
   background-color: #4CAF50;
   color: white;
-  padding: 12px 20px;
-  border: none;
-  cursor: pointer;
+  padding: 6px 5px;
+  margin-bottom: 20px;
+  border:  none;
+  cursor:pointer;
 }
 
 input[type=submit]:hover {
