--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             max-width: 640px;
             padding: 20px 20px 20px 20px;
             border-radius: 10%;
-            margin-bottom: 100px;
+            margin-bottom: 150px;
         }
         img {
              border-radius: 50%;
@@ -108,6 +108,7 @@ input[type=submit]:hover {
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 8px;
+  margin-top: 4px;
 }
 
 /* Create two columns that float next to eachother */
