feat(spell-fix): fix the spelling and urls

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     the place I own on the Internet. <br> The desire to make something useful steers my motivation. I am an optimist, a Technology Enthusiast, an avid Music lover, a couch potato and a good listener. I also love to watch TV-Shows and I'm
                     open to suggestions.</p>
                 <div class="social-icons">
-                    <a href="https://www.linkedin.com/in/sanchit-k-547585189/">
+                    <a href="https://www.linkedin.com/in/sanchit-khurana/">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
                     <a href="https://github.com/GeniusLearner">
@@ -82,7 +82,7 @@
                     <a href="https://twitter.com/genius_learner">
                         <i class="fab fa-twitter"></i>
                     </a>
-                    <a href="https://www.facebook.com/GeniusLearner?ref=bookmarks">
+                    <a href="https://www.facebook.com/GeniusLearner/">
                         <i class="fab fa-facebook-f"></i>
                     </a>
                     <a href="https://www.instagram.com/geniuslearner/">
@@ -126,7 +126,7 @@
                     <br>
                     <div>
                         <br><br><br><br><br><br><br><br><br><br><br><br>
-                        <div class="subheading mb-3">Hactoberfest 2019</div>
+                        <div class="subheading mb-3">Hacktoberfest 2019</div>
                         <p>Completed Hacktoberfest by landing four pull requests & enhanced git skills and got familiar with open source.</p>
                     </div>
                 </div>
