--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <span class="text-primary">Khurana</span>
                 </h1>
                 <div class="subheading mb-5">Budding FOSS Developer ·
-                    <a href="mailto:name@email.com">sanchitkhuranask@gmail.com</a>
+                    <a href="mailto:sanchitkhuranask@gmail.com">sanchitkhuranask[at]gmail[dot]com</a>
                 </div>
                 <p class="lead mb-5">I am a junior student pursuing Bachelor of Technology in Computer Science and Engineering from Guru Gobind Singh Indraprastha University, Delhi, India. I am a Python enthusiast and currently learning about web technologies. This site is
                     the place I own on the Internet. <br> The desire to make something useful steers my motivation. I am an optimist, a Technology Enthusiast, an avid Music lover, a couch potato and a good listener. I also love to watch TV-Shows and I'm
